@@ -3,6 +3,7 @@
  * ONAP
  * ================================================================================
  * Copyright (C) 2018-2019 AT&T Intellectual Property. All rights reserved.
+ * Modifications Copyright (C) 2024 Nordix Foundation.
  * ================================================================================
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -30,11 +31,8 @@ import static org.onap.policy.common.endpoints.event.comm.bus.TopicTestBase.MY_F
 import static org.onap.policy.common.endpoints.event.comm.bus.TopicTestBase.MY_FETCH_TIMEOUT;
 import static org.onap.policy.common.endpoints.event.comm.bus.TopicTestBase.MY_PARTITION;
 import static org.onap.policy.common.endpoints.properties.PolicyEndPointProperties.PROPERTY_ALLOW_SELF_SIGNED_CERTIFICATES_SUFFIX;
-import static org.onap.policy.common.endpoints.properties.PolicyEndPointProperties.PROPERTY_DMAAP_DME2_AFT_ENVIRONMENT_SUFFIX;
 import static org.onap.policy.common.endpoints.properties.PolicyEndPointProperties.PROPERTY_HTTP_HTTPS_SUFFIX;
 import static org.onap.policy.common.endpoints.properties.PolicyEndPointProperties.PROPERTY_MANAGED_SUFFIX;
-import static org.onap.policy.common.endpoints.properties.PolicyEndPointProperties.PROPERTY_TOPIC_AAF_MECHID_SUFFIX;
-import static org.onap.policy.common.endpoints.properties.PolicyEndPointProperties.PROPERTY_TOPIC_AAF_PASSWORD_SUFFIX;
 import static org.onap.policy.common.endpoints.properties.PolicyEndPointProperties.PROPERTY_TOPIC_API_KEY_SUFFIX;
 import static org.onap.policy.common.endpoints.properties.PolicyEndPointProperties.PROPERTY_TOPIC_API_SECRET_SUFFIX;
 import static org.onap.policy.common.endpoints.properties.PolicyEndPointProperties.PROPERTY_TOPIC_EFFECTIVE_TOPIC_SUFFIX;
@@ -45,20 +43,17 @@ import static org.onap.policy.common.endpoints.properties.PolicyEndPointProperti
 import static org.onap.policy.common.endpoints.properties.PolicyEndPointProperties.PROPERTY_TOPIC_SOURCE_FETCH_LIMIT_SUFFIX;
 import static org.onap.policy.common.endpoints.properties.PolicyEndPointProperties.PROPERTY_TOPIC_SOURCE_FETCH_TIMEOUT_SUFFIX;
 
-import java.util.Arrays;
+import java.util.List;
 import lombok.Getter;
 import org.onap.policy.common.endpoints.parameters.TopicParameters;
 
+@Getter
 public class UebTopicPropertyBuilder extends TopicPropertyBuilder {
 
     public static final String SERVER = "my-server";
     public static final String TOPIC2 = "my-topic-2";
 
-    public static final String MY_AAF_MECHID = "my-aaf-mechid";
-    public static final String MY_AAF_PASS = "my-aaf-passwd";
-
-    @Getter
-    private TopicParameters params = new TopicParameters();
+    private final TopicParameters params = new TopicParameters();
 
     /**
      * Constructs the object.
@@ -70,7 +65,7 @@ public class UebTopicPropertyBuilder extends TopicPropertyBuilder {
     }
 
     /**
-     * Adds a topic and configures it's properties with default values.
+     * Adds a topic and configures its properties with default values.
      *
      * @param topic the topic to be added
      * @return this builder
@@ -83,9 +78,6 @@ public class UebTopicPropertyBuilder extends TopicPropertyBuilder {
         setTopicProperty(PROPERTY_TOPIC_SOURCE_CONSUMER_INSTANCE_SUFFIX, MY_CONS_INST);
         setTopicProperty(PROPERTY_MANAGED_SUFFIX, "true");
         setTopicProperty(PROPERTY_HTTP_HTTPS_SUFFIX, "true");
-        setTopicProperty(PROPERTY_TOPIC_AAF_MECHID_SUFFIX, MY_AAF_MECHID);
-        setTopicProperty(PROPERTY_TOPIC_AAF_PASSWORD_SUFFIX, MY_AAF_PASS);
-        setTopicProperty(PROPERTY_DMAAP_DME2_AFT_ENVIRONMENT_SUFFIX, MY_AFT_ENV);
         setTopicProperty(PROPERTY_ALLOW_SELF_SIGNED_CERTIFICATES_SUFFIX, "true");
         setTopicProperty(PROPERTY_TOPIC_API_KEY_SUFFIX, MY_API_KEY);
         setTopicProperty(PROPERTY_TOPIC_API_SECRET_SUFFIX, MY_API_SECRET);
@@ -101,8 +93,6 @@ public class UebTopicPropertyBuilder extends TopicPropertyBuilder {
         params.setConsumerInstance(MY_CONS_INST);
         params.setManaged(true);
         params.setUseHttps(true);
-        params.setUserName(MY_AAF_MECHID);
-        params.setPassword(MY_AAF_PASS);
         params.setAftEnvironment(MY_AFT_ENV);
         params.setAllowSelfSignedCerts(true);
         params.setApiKey(MY_API_KEY);
@@ -110,7 +100,7 @@ public class UebTopicPropertyBuilder extends TopicPropertyBuilder {
         params.setFetchLimit(MY_FETCH_LIMIT);
         params.setFetchTimeout(MY_FETCH_TIMEOUT);
         params.setPartitionId(MY_PARTITION);
-        params.setServers(Arrays.asList(SERVER));
+        params.setServers(List.of(SERVER));
 
         return this;
     }
